Now joining a game and receiving the selection of new decks Currently working on receiving already selected decks on join (It's currently broken) Fixed the height of the page and spacing of the element
Took 1 hour 39 minutes

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -115,7 +115,6 @@ select {
 }
 
 body {
-    padding: 2rem;
     background-color: var(--dark-gray);
     color: var(--white);
     font-family: "Lato", sans-serif;
@@ -172,6 +171,9 @@ button > svg {
 
 section {
     width: 100%;
+    min-height: 100vh;
+    padding: 2rem;
+    gap: 2rem;
     justify-content: space-evenly;
     display: flex;
     flex-direction: column;
